<resources>
    <string name="app_name">Furniture-Android-App</string>
    <string name="download">Download</string>
    <string name="requiredDownloadMessage">Model has not been downloaded yet. <br />Click on the download button.</string>
    <string name="cardPriceText">Price:</string>
    <string name="currentPage">Page:</string>
    <string name="all_pages">All Pages:</string>
    <string name="previousButton">Previous</string>
    <string name="nextButton">Next</string>
    <string name="furniture_image_description">furniture image</string>
    <string name="check_in_3d">Check in 3d</string>
    <string name="search_options">FILTER</string>
    <string name="search_option_start_price">Start Price</string>
    <string name="search_option_end_price">End Price</string>
    <string name="search_option_sort_by">Sort by</string>
    <string name="contact">Contact</string>
    <string name="refer_my_project">Refer my project</string>
    <string name="my_orders">My orders</string>
    <string name="my_account">My account</string>
    <string name="store_offer">Store offer</string>
    <string name="welcome">Welcome,</string>
    <string name="log_out">Log out</string>
</resources>