<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".FurnitureListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/listProgressBar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@android:dimen/thumbnail_height"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previousPageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:text="@string/previousButton" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center|left"
                    android:text="@string/currentPage"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center|left"
                    android:text="@string/all_pages"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <TextView
                    android:id="@+id/currentPageNumber"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:gravity="center"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <TextView
                    android:id="@+id/allPages"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintWidth_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/nextPageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.25"
                android:text="@string/nextButton" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>